# simpleAutosarTest

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  build.ps1  build.sh  requirements.txt  run.ps1  run.sh  run_gui.ps1  run_gui.sh  simulator_gui.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
config/: ecu_config.cfg
docs/: architecture.md  build_instructions.md  glossary.md  gui_simulator.md  learning_guide.md
src/: main.c
src/bsw/com/: Com.c  Com.h
src/bsw/common/: Std_Types.h
src/bsw/det/: Det.c  Det.h
src/bsw/ecum/: EcuM.c  EcuM.h
src/bsw/os/: Os.c  Os.h
src/rte/: Rte.c  Rte.h
src/swc/EngineControl/: EngineControl.c  EngineControl.h
src/swc/SensorReader/: SensorReader.c  SensorReader.h
